# xrtcpro

./: .gitmodules  README.md
xrtc-third_party/: CMakeLists.txt
xrtc-third_party/NIM_Duilib_Framework/: CMakeLists.txt
xrtc-third_party/NIM_Duilib_Framework/base/: CMakeLists.txt  base.vcxproj
xrtc-third_party/NIM_Duilib_Framework/duilib/: duilib.vcxproj
xrtc-third_party/NIM_Duilib_Framework/examples/basic/: basic.vcxproj
xrtc-third_party/NIM_Duilib_Framework/examples/controls/: controls.vcxproj  controls_form.cpp
xrtc-third_party/NIM_Duilib_Framework/examples/grid/: grid.vcxproj
xrtc-third_party/NIM_Duilib_Framework/examples/layouts/: layouts.vcxproj
xrtc-third_party/NIM_Duilib_Framework/examples/virtualbox/: virtualbox.vcxproj
xrtc-third_party/NIM_Duilib_Framework/ui_components/: ui_components.vcxproj
xrtc-third_party/jsoncpp/source/: CMakeLists.txt
xrtc-third_party/jsoncpp/source/src/lib_json/: CMakeLists.txt
xrtc-third_party/libjpeg-turbo/: CMakeLists.txt
xrtc-third_party/libjpeg-turbo/simd/: CMakeLists.txt
xrtc-third_party/libwebrtc/: CMakeLists.txt  README.md  build.sh
xrtc-third_party/libwebrtc/src/modules/audio_processing/aec_dump/: aec_dump_impl.cc  aec_dump_impl.h  capture_stream_info.cc  capture_stream_info.h  write_to_file_task.cc  write_to_file_task.h
xrtc-third_party/libwebrtc/src/modules/rtp_rtcp/source/: rtp_format.cc  rtp_header_extensions.cc  rtp_video_header.h
xrtc-third_party/libwebrtc/src/modules/video_capture/windows/: sink_filter_ds.cc
xrtc-third_party/libyuv/: CMakeLists.txt
xrtcsdk/: CMakeLists.txt
xrtcsdk/examples/windows/: CMakeLists.txt  main.cpp
xrtcsdk/examples/windows/src/: basic_form.cpp  basic_form.h
xrtcsdk/xrtc/: CMakeLists.txt  xrtc.cpp  xrtc.h
xrtcsdk/xrtc/base/: xrtc_global.cpp  xrtc_global.h  xrtc_json.cpp
xrtcsdk/xrtc/device/: cam_impl.cpp  cam_impl.h  xrtc_render.h
xrtcsdk/xrtc/media/base/: base_pin.h  in_pin.cpp  in_pin.h  media_chain.cpp  media_chain.h  media_frame.h  out_pin.cpp  out_pin.h  xrtc_pusher.cpp  xrtc_pusher.h
xrtcsdk/xrtc/media/chain/: xrtc_preview.cpp  xrtc_preview.h  xrtc_push_stream.cpp  xrtc_push_stream.h
xrtcsdk/xrtc/media/filter/: x264_encoder_filter.cpp  x264_encoder_filter.h
xrtcsdk/xrtc/media/sink/: d3d9_render_sink.cpp  d3d9_render_sink.h
xrtcsdk/xrtc/media/source/: xrtc_video_source.cpp  xrtc_video_source.h
